[1.0.1-SNAPSHOT]

[1.0.0]
- Initial release based on Android 28 version