@@ -29,7 +29,7 @@ import org.objectweb.asm.Opcodes;
 import org.objectweb.asm.TypePath;
 
 /**
- * Visitor that tries to ensures bytecode version <= 51 (Java 7) and that throws if it sees default
+ * Visitor that tries to ensures bytecode version &lt;= 51 (Java 7) and that throws if it sees default
  * or static interface methods (i.e., non-abstract interface methods), which don't exist in Java 7.
  * <p>The class version will 52 iff static interface method from the bootclasspath is invoked.
  * This is mostly ensure that the generated bytecode is valid.
