@@ -48,8 +48,8 @@ public interface OptionsProvider {
   /**
    * Returns the starlark options in a name:value map.
    *
-   * <p>These follow the basics of the option syntax, --<name>=<value> but are parsed and stored
-   * differently than native options based on <name> starting with "//". This is a sufficient
+   * <p>These follow the basics of the option syntax, --&lt;name&gt;=&lt;value&gt; but are parsed and stored
+   * differently than native options based on &lt;name&gt; starting with "//". This is a sufficient
    * demarcation between starlark flags and native flags for now since all starlark flags are
    * targets and are identified by their package path. But in the future when we implement short
    * names for starlark options, this will need to change.
